project(chatClientApp)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

MESSAGE(STATUS "TARGET SYSTEM:" ${CMAKE_SYSTEM_NAME})
MESSAGE(STATUS "BUILD TYPE:" ${CMAKE_BUILD_TYPE})

find_package (Threads)

INCLUDE_DIRECTORIES($ENV{DEPLOY_PATH}/inc/chatClientAPI)

SET (SRC_LIST src/main.cpp)

if(${CMAKE_SYSTEM_NAME} MATCHES "Android")
    MESSAGE(STATUS "ANDROID API:" ${ANDROID_NATIVE_API_LEVEL})
    MESSAGE(STATUS "ANDROID ABI:" ${ANDROID_ABI})

    LINK_DIRECTORIES($ENV{DEPLOY_PATH}/lib/${CMAKE_BUILD_TYPE}/android/${ANDROID_NATIVE_API_LEVEL}/${ANDROID_ABI})
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    LINK_DIRECTORIES($ENV{DEPLOY_PATH}/lib/${CMAKE_BUILD_TYPE}/linux)
endif()

SET (LIBRARIES ${CMAKE_THREAD_LIBS_INIT}
               chatClientAPI)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})
